--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
+<app-navbar></app-navbar>
+
 <div class="container main-container">
   <h1>Demos <small>Angular</small></h1>
   <hr>
-  <app-ng-style></app-ng-style>
+  <router-outlet></router-outlet>
 </div>
+
