--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,16 +1,14 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
-  <a class="navbar-brand" href="#"> Demos </a>
-  <button (click)="showNavbar()" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav" [ngClass]=" {'show' : navbarCollapsed } ">
-    <ul class="navbar-nav">
-      <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="['home']" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item"  routerLinkActive="active">
-        <a class="nav-link" [routerLink]="['usuario']" href="#"> Usuario </a>
-      </li>
-    </ul>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#"> Demos </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a  [routerLink]="['home']" routerLinkActive="active" class="nav-link" aria-current="page" href="#"> Home </a>
+        <a [routerLink]="['usuario',10]" routerLinkActive="active" class="nav-link" aria-current="page" href="#"> Usuario </a>
+      </div>
+    </div>
   </div>
 </nav>
